--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="start-here.html">Start Here</a>
       <a href="about.html">About Me</a>
       <a href="donor-info.html">Donor Info</a>
+      <a href="donor-testimonials.html">Donor Testimonials</a>
       <a href="book.html">Book</a>
     </nav>
   </header>
