--- a/donor-nancy.html
+++ b/donor-nancy.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <header>
+    <h1>Tito Needs a Kidney</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="start-here.html">Start Here</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="donor-testimonials.html">Donor Stories</a></li>
-        <li><a href="book.html">Book</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="start-here.html">Start Here</a>
+      <a href="about.html">About Me</a>
+      <a href="donor-info.html">Donor Info</a>
+      <a href="donor-testimonials.html">Donor Testimonials</a>
+      <a href="book.html">Book</a>
     </nav>
   </header>
 
