--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
     <section class="cta">
       <a href="start-here.html" class="button">Start Here</a>
-      <a href="book.html" class="button">Read My Book</a>
+      <a href="https://www.amazon.com/dp/B0DSXVL84P" target="_blank" class="button">Read My Book</a>
+
       <a href="donor-info.html" class="button">Become a Donor</a>
     </section>
 
