update folder structure

--- a/donor-testimonials.html
+++ b/donor-testimonials.html
@@ -24,22 +24,22 @@
     <p>These stories come from people who have walked the path of living donation. Each one offers a different perspective, but they all share the same message: donating a kidney changes lives.</p>
 
     <section class="testimonial-summary">
-      <h2><a href="donor-luis.html">Luis B.</a></h2>
+      <h2><a href="testimonials/donor-luis.html">Luis B.</a></h2>
       <p>Uncle, donor, and advocate. Luis shares his journey from doubt to determination, through testing and surgery, and what it meant to try — even when the transplant didn’t last. “If I had another kidney to give, I would do it again in a heartbeat.”</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="donor-amy.html">Amy S.</a></h2>
+      <h2><a href="testimonials/donor-amy.html">Amy S.</a></h2>
       <p>A cousin who donated in 2005, Amy reflects on her experience from testing through recovery, motherhood, and ultramarathons. “I have no regrets... and I’d be happy to talk more to anyone considering donating.”</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="donor-john.html">John G.</a></h2>
+      <h2><a href="testimonials/donor-john.html">John G.</a></h2>
       <p>John donated during the early days of the COVID-19 pandemic after a chance conversation with a coworker. “I would recommend the process to anyone who is able and willing to make a difference in someone’s life.”</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="donor-nancy.html">Nancy M. Stabins</a></h2>
+      <h2><a href="testimonials/donor-nancy.html">Nancy M. Stabins</a></h2>
       <p>A wine-loving RN and mother who tried — and was disqualified — but still sees the process as worthwhile. “It was worth trying and failing than not trying at all.”</p>
     </section>
   </main>
