--- a/about.html
+++ b/about.html
@@ -7,17 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="start-here.html">Start Here</a></li>
-        <li><a href="about.html" class="active">About Me</a></li>
-        <li><a href="donor-info.html">Donor Info</a></li>
-        <li><a href="resources.html">Resources</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div data-inclue="header.html"></div>
 
   <main class="content">
     <h1>About Me</h1>
@@ -33,5 +23,7 @@
 
     <p>Thanks for being here. You’re already making a difference.</p>
   </main>
+  <div data-include="footer.html"></div>
+  <script src="include.js"></script>
 </body>
 </html>
