--- a/start-here.html
+++ b/start-here.html
@@ -7,16 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Tito Needs a Kidney</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="start-here.html">Start Here</a>
-      <a href="about.html">About Me</a>
-      <a href="donor-info.html">Donor Info</a>
-      <a href="book.html">Book</a>
-    </nav>
-  </header>
+  <div data-inclue="header.html"></div>
 
   <main>
     <section class="intro">
@@ -31,8 +22,7 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Tito. All rights reserved.</p>
-  </footer>
+  <div data-include="footer.html"></div>
+  <script src="include.js"></script>
 </body>
 </html>
