--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div data-inclue="header.html"></div>
+  <div data-include="header.html"></div>
 
   <main>
     <section class="intro">
