--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-inclue="header.html"></div>
+  <div data-include="header.html"></div>
 
   <main class="content">
     <h1>Donor Testimonial: John G.</h1>
