--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donor Testimonial: John G. | Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <div data-include="header.html"></div>
+  <div data-include="/header.html"></div>
 
   <main class="content">
     <h1>Donor Testimonial: John G.</h1>
@@ -35,7 +35,7 @@
     <p><a href="donor-testimonials.html">← Back to all donor stories</a></p>
   </main>
 
-  <div data-include="footer.html"></div>
+  <div data-include="/footer.html"></div>
   <script src="include.js"></script>
 </body>
 </html>
