--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -48,6 +48,6 @@
   </main>
 
   <div data-include="/footer.html"></div>
-  <script src="include.js"></script>
+  <script src="/include.js"></script>
 </body>
 </html>
