added way back to main page

--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -44,7 +44,7 @@
       <p class="testimonial-author">— Luis B.</p>
     </section>
 
-    <p><a href="donor-testimonials.html">← Back to all donor stories</a></p>
+    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
   </main>
 
   <div data-include="/footer.html"></div>
