--- a/testimonials/donor-nancy.html
+++ b/testimonials/donor-nancy.html
@@ -32,7 +32,7 @@
       <p class="testimonial-author">— Nancy McCullough Stabins, RN<br>11/27/2023</p>
     </section>
 
-    <p><a href="donor-testimonials.html">← Back to all donor stories</a></p>
+    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
   </main>
 
   <div data-include="/footer.html"></div>
