--- a/testimonials/donor-amy.html
+++ b/testimonials/donor-amy.html
@@ -32,7 +32,7 @@
       <p class="testimonial-author">— Amy S.</p>
     </section>
 
-    <p><a href="donor-testimonials.html">← Back to all donor stories</a></p>
+    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
   </main>
 
   <div data-include="/footer.html"></div>
