--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-include="header.html"></div>
+  <div data-include="includes/header.html"></div>
 
   <main class="content">
     <h1>About Me</h1>
@@ -23,7 +23,7 @@
 
     <p>Thanks for being here. You’re already making a difference.</p>
   </main>
-  <div data-include="footer.html"></div>
+  <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
 </body>
 </html>
