--- a/donor-testimonials.html
+++ b/donor-testimonials.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-include="header.html"></div>
+  <div data-include="includes/header.html"></div>
 
   <main class="content">
     <h1>Donor Testimonials</h1>
@@ -34,7 +34,7 @@
     </section>
   </main>
 
-  <div data-include="footer.html"></div>
+  <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
 </body>
 </html>
