--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div data-include="header.html"></div>
+  <div data-include="includes/header.html"></div>
 
   <main>
     <section class="intro">
@@ -29,7 +29,7 @@
       <!-- Placeholder for AdSense Code -->
     </section>
   </main>
-  <div data-include="footer.html"></div>
+  <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
 </body>
 </html>
