--- a/start-here.html
+++ b/start-here.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-include="header.html"></div>
+  <div data-include="includes/header.html"></div>
 
   <main>
     <section class="intro">
@@ -22,7 +22,7 @@
     </section>
   </main>
 
-  <div data-include="footer.html"></div>
+  <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
 </body>
 </html>
