--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tito Needs a Kidney - a story of resilience through dialysis and transplant">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main>
-    <section class="intro">
-      <h2>Meet Tito</h2>
-      <p>I’m Tito. I’ve been through dialysis, eight surgeries, and two kidney transplants. I’m also a wine judge, a transplant advocate, and someone who refuses to give up.</p>
-      <p>Whether you’re navigating kidney disease, supporting someone who is, or curious about living donation — this site is for you.</p>
-    </section>
+  <main class="content">
+    <h1>Welcome to Tito Needs a Kidney</h1>
+    <p>This site is a living guide for people dealing with kidney failure, dialysis, transplant, or living donation — built from lived experience, not just theory.</p>
 
-    <section class="cta">
-      <a href="start-here.html" class="button">Start Here</a>
-      <a href="https://www.amazon.com/dp/B0DSXVL84P" target="_blank" class="button">Read My Book</a>
+    <h2>Explore the Topics</h2>
+    <ul>
+      <li><a href="start-here.html">Start Here</a> — where to begin, especially if you're new</li>
+      <li><a href="book.html">Book: Tito Needs a Kidney</a> — read about the story that started it all</li>
+      <li><a href="donor-info.html">Donor Info</a> — facts and risks for people considering donation</li>
+      <li><a href="dialysis.html">Dialysis Hub</a> — how it works, what to expect, and who’s involved</li>
+      <li><a href="transplant.html">Transplant Hub</a> — evaluation, surgery, and post-transplant life</li>
+    </ul>
 
-      <a href="donor-info.html" class="button">Become a Donor</a>
-    </section>
-
-    <section class="adsense">
-      <!-- Placeholder for AdSense Code -->
-    </section>
+    <p>Everything here is organized so you don’t have to feel overwhelmed. Take what helps. Leave what doesn’t. Ask for more if something’s missing.</p>
   </main>
+
   <div data-include="includes/footer.html"></div>
-  <script src="include.js"></script>
 </body>
 </html>
+
