--- a/start-here.html
+++ b/start-here.html
@@ -4,25 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Start Here - Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main>
-    <section class="intro">
-      <h2>Where to Start</h2>
-      <p>If you're new here, welcome. This site is for anyone navigating kidney disease, transplant, or simply trying to understand it better.</p>
-      <p>Start with these:</p>
-      <ul>
-        <li><a href="book.html">Read the book</a></li>
-        <li><a href="donor-info.html">Learn about living donation</a></li>
-        <li><a href="about.html">Get to know my story</a></li>
-      </ul>
-    </section>
+  <main class="content">
+    <h1>Start Here</h1>
+
+    <p>This site exists to make life with kidney failure less confusing and less lonely.</p>
+
+    <p>If you or someone you care about is dealing with dialysis, transplant, or donation — this is for you.</p>
+
+    <p>You’ll find:</p>
+    <ul>
+      <li>Pages that explain the process step by step</li>
+      <li>Testimonials from real people — both donors and recipients</li>
+      <li>Simple explanations of complicated things (like lab work or access options)</li>
+      <li>Personal stories about the things no one warned us about</li>
+    </ul>
+
+    <p>Start wherever makes sense for you:</p>
+    <ul>
+      <li><strong><a href="donor-info.html">Donor Info</a></strong> — facts about living donation</li>
+      <li><strong><a href="dialysis.html">Dialysis Hub</a></strong> — what to expect, and how to manage it</li>
+      <li><strong><a href="transplant.html">Transplant Hub</a></strong> — how evaluation works, what recovery is really like</li>
+    </ul>
+
+    <p>There’s no popups or login. Just real info. If you’re overwhelmed, take a break and come back later. It’ll still be here.</p>
   </main>
 
   <div data-include="includes/footer.html"></div>
-  <script src="include.js"></script>
 </body>
 </html>
+
