--- a/donor-testimonials.html
+++ b/donor-testimonials.html
@@ -36,5 +36,6 @@
 
   <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
+<script src="include.js"></script>
 </body>
 </html>
