--- a/about.html
+++ b/about.html
@@ -25,5 +25,6 @@
   </main>
   <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
+<script src="include.js"></script>
 </body>
 </html>
