--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <div data-include="includes/footer.html"></div>
   <script src="include.js"></script>
+<script src="include.js"></script>
 </body>
 </html>
 
