--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -37,5 +37,6 @@
 
   <div data-include="/footer.html"></div>
   <script src="/include.js"></script>
+<script src="include.js"></script>
 </body>
 </html>
