--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -49,5 +49,6 @@
 
   <div data-include="/footer.html"></div>
   <script src="/include.js"></script>
+<script src="include.js"></script>
 </body>
 </html>
