--- a/donor-info.html
+++ b/donor-info.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
-  <header>
-    <h1>Donor Information</h1>
-  </header>
+  <div data-include="includes/header.html"></div>
 
   <main class="content">
     <section id="life-expectancy">
