--- a/testimonials/donor-amy.html
+++ b/testimonials/donor-amy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donor Testimonial: Amy S. | Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
   <div data-include="/header.html"></div>
@@ -37,6 +37,6 @@
 
   <div data-include="/footer.html"></div>
   <script src="/include.js"></script>
-<script src="include.js"></script>
+
 </body>
 </html>
