fixed things maybe

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <p>Thanks for being here. You’re already making a difference.</p>
   </main>
   <div data-include="includes/footer.html"></div>
-  <script src="include.js"></script>
-<script src="include.js"></script>
+  <script src="scripts/include.js"></script>
+<script src="scripts/include.js"></script>
 </body>
 </html>
