--- a/donor-info.html
+++ b/donor-info.html
@@ -80,6 +80,6 @@
   <footer>
     <p><a href="index.html">← Back to Home</a></p>
   </footer>
-<script src="include.js"></script>
+<script src="scripts/include.js"></script>
 </body>
 </html>
