--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
-  <div data-include="/header.html"></div>
+  <div data-include="../includes/header.html"></div>
 
   <main class="content">
     <h1>Donor Testimonial: John G.</h1>
@@ -35,8 +35,8 @@
     <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
   </main>
 
-  <div data-include="/footer.html"></div>
-  <script src="/include.js"></script>
+  <div data-include="../includes/footer.html"></div>
+  <script src="../scripts/include.js"></script>
 
 </body>
 </html>
