--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </main>
 
   <div data-include="includes/footer.html"></div>
-  <script src="include.js"></script>
-<script src="include.js"></script>
+  <script src="scripts/include.js"></script>
+<script src="scripts/include.js"></script>
 </body>
 </html>
 
