--- a/start-here.html
+++ b/start-here.html
@@ -35,7 +35,7 @@
   </main>
 
   <div data-include="includes/footer.html"></div>
-<script src="include.js"></script>
+<script src="scripts/include.js"></script>
 </body>
 </html>
 
