--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donor Testimonial: Luis B. | Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="../styles/main.css" />
 </head>
 <body>
  <div data-include="../includes/header.html"></div>
@@ -48,7 +48,7 @@
   </main>
 
 <div data-include="../includes/footer.html"></div>
-  <script src="/scripts/include.js"></script>
+  <script src="../scripts/include.js"></script>
 
 </body>
 </html>
