donor testimonials removed

--- a/testimonials/donor-amy.html
+++ b/testimonials/donor-amy.html
@@ -10,7 +10,7 @@
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>Donor Testimonial: Amy S.</h1>
+    <h1>Amy S.</h1>
 
     <section class="testimonial">
       <p>I donated a kidney to my cousin in 2005. In 2004, he had woken up acutely blind. It turned out that hypertension secondary to renal failure had caused the blood vessels in his retinas to rupture. It was the first indication that he had that something was wrong. By the time he was diagnosed with renal failure, the underlying cause was no longer apparent. His doctors finally concluded that it had likely been a viral issue, although the specific virus could never be isolated or identified. He began dialysis. Fortunately, once his hypertension was addressed and the blood reabsorbed, his sight was restored.</p>
