--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -10,7 +10,7 @@
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>Donor Testimonial: John G.</h1>
+    <h1>John G.</h1>
 
     <section class="testimonial">
       <p>In the beginning days of the COVID-19 pandemic, I had a chance encounter with a co-worker as we were packing up our cubicles in order to start working remotely. It happened that he mentioned that he was looking for a kidney donor, as he had been on dialysis for a few years. As luck would have it, we were the same blood type and it seemed that I might be a potential match.</p>
