--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -10,7 +10,7 @@
  <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>Donor Testimonial: Luis B.</h1>
+    <h1>Luis B.</h1>
 
     <section class="testimonial">
       <p>Early in the morning of January 25th of this year (2023), I checked into the hospital at the University of Colorado to have elective surgery. I had never had a surgery before, so I was understandably anxious and fearful about what I was about to do. However, my overriding feeling at the time was determination…I was determined to go through this surgery because of the possibility of what the surgery could do. In a little over an hour, they would roll me into an operating room, remove my left kidney, put the kidney onto a plane to Rochester, NY, and then put that kidney into my nephew, Tito. Our hope was that this kidney would provide a life-saving treatment for Tito so that he could get off of dialysis and get some semblance of a normal life. Unfortunately (as evidenced by you reading this post on this website), through no fault of his own, Tito’s new kidney failed and he is in need of another kidney. I wanted to share my story in the hopes that my experience could help someone along their path of choosing to be a kidney donor.</p>
