--- a/testimonials/donor-nancy.html
+++ b/testimonials/donor-nancy.html
@@ -10,7 +10,7 @@
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>Donor Testimonial: Nancy M. Stabins</h1>
+    <h1>Nancy M. Stabins</h1>
 
     <section class="testimonial">
       <p>It started with a wine judge, young, in the prime of his life, and I found out he needed a kidney. So, I started a fundraiser to help him out. My thoughts were that if someone needed a kidney, what could help more than to have some extra money while recuperating from the operation. Little did I realize the scope of his illness and what the next 3 months would mean to me.</p>
