--- a/donor-info.html
+++ b/donor-info.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Donor Information | Tito Needs a Kidney</title>
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
   <div data-include="includes/header.html"></div>
