--- a/hub/dialysis/expectations.html
+++ b/hub/dialysis/expectations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>What to Expect During Dialysis</title>
-    <link rel="stylesheet" href="../../styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
     <script src="../../scripts/include.js" defer></script>
   </head>
   <body>
