--- a/about.html
+++ b/about.html
@@ -24,5 +24,6 @@
     <p>Thanks for being here. You’re already making a difference.</p>
   </main>
   <div data-include="includes/footer.html"></div>
+  <script src="scripts/include.js"></script>
 </body>
 </html>
