--- a/testimonials/donor-nancy.html
+++ b/testimonials/donor-nancy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<div data-include="includes/analytics.html"></div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donor Testimonial: Nancy M. Stabins | Tito Needs a Kidney</title>
