--- a/hub/dialysis/schedule.html
+++ b/hub/dialysis/schedule.html
@@ -13,6 +13,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dialysis Schedule & Timing</title>
+      <!-- Google Fonts: Open Sans -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/main.css" />
+</head>
+<body>
     <link rel="stylesheet" href="/styles/main.css" />
     <script src="../../scripts/include.js" defer></script>
   </head>
