--- a/hub/dialysis/access.html
+++ b/hub/dialysis/access.html
@@ -18,14 +18,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
-    <link rel="stylesheet" href="/styles/main.css" />
     <script src="../../scripts/include.js" defer></script>
   </head>
   <body>
     <div data-include="../../includes/header.html"></div>
     <main class="content">
+<div data-include="../../includes/dialysis-subnav.html"></div>
       <h1>Dialysis Access Options</h1>
       <p>
         There are two main types of vascular access used for hemodialysis: <strong>catheters</strong> and <strong>fistulas</strong>. Some people may also have a graft, which is less common.
