--- a/hub/dialysis/side-effects.html
+++ b/hub/dialysis/side-effects.html
@@ -18,14 +18,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
-    <link rel="stylesheet" href="/styles/main.css" />
     <script src="../../scripts/include.js" defer></script>
   </head>
   <body>
     <div data-include="../../includes/header.html"></div>
     <main class="content">
+<div data-include="../../includes/dialysis-subnav.html"></div>
       <h1>Common Side Effects of Dialysis</h1>
 
       <p>
