--- a/hub/donation/index.html
+++ b/hub/donation/index.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH');
-</script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kidney Donation Overview</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH');
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kidney Donation Overview</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-    <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
-  </head>
-  <body>
-    <div data-include="../../includes/header.html"></div>
-    <main class="content">
-      <h1>Kidney Donation Overview</h1>
-      <p>
-        Kidney donation is a generous and life-saving act. This section provides a clear explanation of what donors need to know — from evaluation through recovery.
-      </p>
-
-      <ul>
-        <li><a href="eligibility.html">Who Can Donate?</a></li>
-        <li><a href="evaluation.html">Evaluation & Testing</a></li>
-        <li><a href="risks.html">Risks & Recovery</a></li>
-        <li><a href="types.html">Types of Donation</a></li>
-        <li><a href="matching.html">Matching & Paired Donation</a></li>
-      </ul>
-
-      <p>
-        Whether you're considering living donation or just want to understand the process, these pages are here to guide you with facts and firsthand insight.
-      </p>
-    </main>
-    <div data-include="../../includes/footer.html"></div>
-  </body>
+  <div data-include="../../includes/header.html"></div>
+  <main class="content">
+    <h1>Kidney Donation Overview</h1>
+    <p>
+      Kidney donation is a generous and life-saving act. This section provides a clear explanation of what donors need to know — from evaluation through recovery.
+    </p>
+    <ul>
+      <li><a href="who-can-donate.html">Who Can Donate?</a></li>
+      <li><a href="testing.html">Evaluation & Testing</a></li>
+      <li><a href="risks.html">Risks</a></li>
+      <li><a href="recovery.html">Recovery</a></li>
+      <li><a href="life-after.html">Life After Donation</a></li>
+    </ul>
+    <p>
+      Whether you're considering living donation or just want to understand the process, these pages are here to guide you with facts and firsthand insight.
+    </p>
+  </main>
+  <div data-include="../../includes/footer.html"></div>
+  <script src="../../scripts/include.js" defer></script>
+</body>
 </html>
 
