--- a/hub/transplant/index.html
+++ b/hub/transplant/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH');
-</script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kidney Transplant Overview</title>
-      <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH');
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kidney Transplant Overview</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-    <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
-  </head>
-  <body>
-    <div data-include="../../includes/header.html"></div>
-    <main class="content">
-      <h1>Kidney Transplant Overview</h1>
-      <p>
-        This section walks you through the full transplant journey — from evaluation to surgery and recovery. You'll learn what to expect at each stage, what the risks are, and how to navigate life after transplant.
-      </p>
+  <div data-include="../../includes/header.html"></div>
+  <main class="content">
+    <div data-include="../../includes/transplant-subnav.html"></div>
+    
+    <h1>Kidney Transplant Overview</h1>
+    <p>
+      This section walks you through the full transplant journey — from initial evaluation
+      to surgery and recovery. You'll learn what to expect at each stage, what the potential
+      risks are, and how to navigate life after transplant.
+    </p>
 
-      <ul>
-        <li><a href="evaluation.html">Evaluation & Tests</a></li>
-        <li><a href="staff.html">Transplant Staff & Roles</a></li>
-        <li><a href="matching.html">Finding a Donor</a></li>
-        <li><a href="operation.html">The Surgery</a></li>
-        <li><a href="recovery.html">After Surgery & Post-Transplant Life</a></li>
-      </ul>
+    <ul>
+      <li><a href="evaluation.html">Evaluation & Tests</a></li>
+      <li><a href="staff.html">Transplant Staff & Roles</a></li>
+      <li><a href="matching.html">Finding a Donor</a></li>
+      <li><a href="surgery.html">The Surgery</a></li>
+      <li><a href="recovery.html">Recovery After Surgery</a></li>
+      <li><a href="complications.html">Complications & Risks</a></li>
+      <li><a href="life-after.html">Life After Transplant</a></li>
+    </ul>
 
-      <p>
-        These pages offer a clear, organized view of what really happens — combining medical knowledge with lived experience.
-      </p>
-    </main>
-    <div data-include="../../includes/footer.html"></div>
-  </body>
+    <p>
+      These pages combine medical guidance with real transplant experiences, giving you 
+      practical information to feel prepared and supported through your journey.
+    </p>
+  </main>
+  <div data-include="../../includes/footer.html"></div>
+  <script src="../../scripts/include.js" defer></script>
+</body>
 </html>
 
