--- a/hub/index.html
+++ b/hub/index.html
@@ -18,53 +18,52 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
-    <link rel="stylesheet" href="/styles/main.css" />
     <script src="../scripts/include.js" defer></script>
   </head>
-  <body>
-    <div data-include="../includes/header.html"></div>
-    <main class="content">
-      <h1>Kidney Knowledge Hub</h1>
-      <p>Clear, honest information for anyone navigating kidney disease, dialysis, transplant, or living donation. Use this as your guide, your glossary, and your sanity check.</p>
+<body>
+  <div data-include="../includes/header.html"></div>
+  <main class="content">
+    <h1>Kidney Knowledge Hub</h1>
+    <p>
+      Clear, honest information for anyone navigating kidney disease, dialysis, transplant,
+      or living donation. Explore each section to find practical guides, personal stories,
+      and resources to help you or a loved one through every stage of kidney care.
+    </p>
 
-      <section>
-        <h2>Dialysis</h2>
-        <ul>
-          <li><a href="dialysis/staff.html">Clinic Staff Roles</a></li>
-          <li><a href="dialysis/access.html">Access Types: Catheter, Fistula, Graft</a></li>
-          <li><a href="dialysis/expectations.html">What to Expect at the Clinic</a></li>
-          <li><a href="dialysis/schedule.html">Treatment Schedule & Transportation</a></li>
-          <li><a href="dialysis/side-effects.html">Common Side Effects</a></li>
-        </ul>
-      </section>
+    <section class="testimonial-summary">
+      <h2><a href="dialysis/index.html">Dialysis Hub</a></h2>
+      <p>
+        Learn about clinic staff roles, dialysis access types, what to expect during
+        treatments, managing side effects, and tips for adjusting to life on dialysis.
+      </p>
+    </section>
 
-      <section>
-        <h2>Transplant</h2>
-        <ul>
-          <li><a href="transplant/evaluation.html">Evaluation Process</a></li>
-          <li><a href="transplant/matching.html">Matching & Compatibility</a></li>
-          <li><a href="transplant/staff.html">Transplant Team Explained</a></li>
-          <li><a href="transplant/surgery.html">The Surgery Itself</a></li>
-          <li><a href="transplant/recovery.html">Post-Surgery Recovery</a></li>
-          <li><a href="transplant/life-after.html">Life After Transplant</a></li>
-          <li><a href="transplant/complications.html">Complications & Red Flags</a></li>
-        </ul>
-      </section>
+    <section class="testimonial-summary">
+      <h2><a href="transplant/index.html">Transplant Hub</a></h2>
+      <p>
+        From evaluation to surgery and post-transplant life, explore each stage of the
+        transplant journey, recovery timelines, managing medications, and avoiding complications.
+      </p>
+    </section>
 
-      <section>
-        <h2>Donation</h2>
-        <ul>
-          <li><a href="donation/who-can-donate.html">Who Can Donate</a></li>
-          <li><a href="donation/risks.html">Risks & Safety</a></li>
-          <li><a href="donation/testing.html">Testing & Approval</a></li>
-          <li><a href="donation/recovery.html">Donor Recovery</a></li>
-          <li><a href="donation/life-after.html">Life After Donation</a></li>
-        </ul>
-      </section>
-    </main>
-    <div data-include="../includes/footer.html"></div>
-  </body>
+    <section class="testimonial-summary">
+      <h2><a href="donation/index.html">Living Donation Hub</a></h2>
+      <p>
+        Understand who can donate, the testing process, surgical risks, and recovery
+        details. Includes real donor stories and insights into long-term outcomes
+        of living kidney donation.
+      </p>
+    </section>
+
+    <section class="testimonial-summary">
+      <h2><a href="../donor-testimonials.html">Donor Testimonials</a></h2>
+      <p>
+        Read inspiring stories from people who stepped forward to help, offering insight
+        into the emotional and physical journey of living kidney donation.
+      </p>
+    </section>
+  </main>
+  <div data-include="../includes/footer.html"></div>
+</body>
 </html>
 
